Changes between 1.3.1 and 1.3.x
==================================================

New features 
++++++++++++++++++

Bug fixes / Maintenance
++++++++++++++++++++++++++

- fix issue57 -f|--looponfail to work with xpassing tests
- fix pyimport() to work with directories
- streamline py.path.local.mkdtemp implementation and usage
- don't print empty lines when showing junitxml-filename

Changes between 1.3.0 and 1.3.1
==================================================

New features 
++++++++++++++++++

- issue91: introduce new py.test.xfail(reason) helper 
  to imperatively mark a test as expected to fail. Can 
  be used from within setup and test functions. This is
  useful especially for parametrized tests when certain 
  configurations are expected-to-fail.  In this case the
  declarative approach with the @py.test.mark.xfail cannot
  be used as it would mark all configurations as xfail. 

- issue102: introduce new --maxfail=NUM option to stop
  test runs after NUM failures.  This is a generalization
  of the '-x' or '--exitfirst' option which is now equivalent
  to '--maxfail=1'.  Both '-x' and '--maxfail' will 
  now also print a line near the end indicating the Interruption. 

- issue89: allow py.test.mark decorators to be used on classes
  (class decorators were introduced with python2.6) and 
  also allow to have multiple markers applied at class/module level
  by specifying a list. 

- improve and refine letter reporting in the progress bar:
  .  pass
  f  failed test
  s  skipped tests (reminder: use for dependency/platform mismatch only)
  x  xfailed test (test that was expected to fail)
  X  xpassed test (test that was expected to fail but passed)

  You can use any combination of 'fsxX' with the '-r' extended
  reporting option. The xfail/xpass results will show up as 
  skipped tests in the junitxml output - which also fixes 
  issue99.

- make py.test.cmdline.main() return the exitstatus instead of raising 